--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kepintaran radit</title>
+    <title>dit's site</title>
 </head>
 <body>
     <h1>hallo</h1>
 </body>
+    <h1>selamat datang di website saya</h1>
 </html>
