--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dit's site</title>
+    <title>simply looks web</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+        }
+    </style>
 </head>
 <body>
-    <h1>hallo</h1>
+    <h1>Hola! selamat datang di Halaman Web Saya</h1>
+    <p>Ini adalah contoh teks sederhana yang ditampilkan di halaman web.</p>
 </body>
-    <h1>selamat datang di website saya</h1>
 </html>
