--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 </head>
 <body>
     <h1>Hola! selamat datang di Halaman Web Saya</h1>
-    <p>Ini adalah contoh teks sederhana yang ditampilkan di halaman web.</p>
+    <p>beginning of a new journey! stay tune for more update.</p>
 </body>
 </html>
