--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1>Hola! selamat datang di Halaman Web Saya</h1>
+    <h1>Hola! welcome to my web page.</h1>
     <p>beginning of a new journey! stay tune for more update.</p>
 </body>
 </html>
